css fix for mobile on mobile!

--- a/src/css/05-objects.css
+++ b/src/css/05-objects.css
@@ -52,7 +52,7 @@
     margin: 0 auto;
     display: block;
     padding: 50px 0;
-    max-width: 800px;
+    max-width: 100%;
   }
   
   
